# MobileNetSSD

./: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  compile-clang.sh  compile-gcc.sh
source/: main.cpp
